--- a/src/app/core/pages/main-category/main-category.component.html
+++ b/src/app/core/pages/main-category/main-category.component.html
@@ -25,6 +25,8 @@
                   <img src="http://backend.fryon.net/{{item.iconPath}}" [alt]="item.nameAr  " class="img-fluid">
                 </div>
                 <svg class="svg-gray" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 368 57"> <g><path d="M0.5,57L184,0,368,57H0.5Z"></path></g> </svg>
+                  <input class="form-check-input position-absolute top-0 start-0 m-2 border-success" style="width: 25px;height: 25px;" type="checkbox" value="" id="checkDefault">
+
               </div>
               <div class="services-item-body">
                 <h3 class="mb-4 fw-bold truncate-string-6">  {{item.nameAr}}</h3>
