--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -98,3 +98,10 @@
 
   <app-navbar></app-navbar>
 </header>
+<div class="button-fixed">
+  <div class="social-media">
+  <ul>
+    <li title="Call"><a class="front" href="tel:{{contactInfo.phone}}"> <i class="fi fi-tr-phone-call sc"></i></a><a class="back" href="tel:{{contactInfo.phone}}"><i class="fi fi-tr-phone-call sc"></i></a></li>
+    <li title="Send Whatsapp"><a class="front" href="tel:{{contactInfo.phone}}"><i class="fi fi-brands-whatsapp"></i></a><a class="back" href="tel:{{contactInfo.phone}}"><i class="fi fi-brands-whatsapp"></i></a></li>
+    </ul>
+</div>
