--- a/src/app/shared/component/not-found404/not-found404.component.html
+++ b/src/app/shared/component/not-found404/not-found404.component.html
@@ -1,1 +1,14 @@
-<p>not-found404 works!</p>
+<div class="page-content">
+<div class="content">
+  <div class="card-widget">
+    <div class="error">
+      <div class="error-cantent">
+        <i><img src="./assets/img/404-error-with-person-looking-concept-illustration.png" alt=""/></i>
+        <h1><span>خطأ 404 -</span>  غير موجود</h1>
+        <p>معذرة! لم يتم الوصول للصفحة المطلوبة</p>
+        <a routerLink="/" class="btn btn-primary">إذهب للصفحة الرئيسية</a>
+      </div><!--error-content-->
+    </div><!--error-->
+  </div><!--card-widget-->
+</div>
+</div>
