--- a/src/assets/scss/layouts/_navbar.scss
+++ b/src/assets/scss/layouts/_navbar.scss
@@ -59,9 +59,10 @@ header.nav-bar {
   .navbar-nav{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    // justify-content: space-between;
     padding-inline-end: rem(20);
     width: 100%;
+    gap: rem(32);
     li {
       position: static;
       a {
