--- a/src/app/shared/component/header/header.component.html
+++ b/src/app/shared/component/header/header.component.html
@@ -55,7 +55,7 @@
           </a>
         </div> -->
         <div class="col-lg-3 col-md-6 column">
-          <a class="item-contact" href="tel:{{contactInfo.phone}}">
+          <a class="item-contact" href="https://wa.me/{{contactInfo.phone}}">
             <div class="icon">
               <i class="fi fi-brands-whatsapp"></i>
             </div>
@@ -102,6 +102,6 @@
   <div class="social-media">
   <ul>
     <li title="Call"><a class="front" href="tel:{{contactInfo.phone}}"> <i class="fi fi-tr-phone-call sc"></i></a><a class="back" href="tel:{{contactInfo.phone}}"><i class="fi fi-tr-phone-call sc"></i></a></li>
-    <li title="Send Whatsapp"><a class="front" href="tel:{{contactInfo.phone}}"><i class="fi fi-brands-whatsapp"></i></a><a class="back" href="tel:{{contactInfo.phone}}"><i class="fi fi-brands-whatsapp"></i></a></li>
+    <li title="Send Whatsapp"><a class="front" href="https://wa.me/{{contactInfo.phone}}"><i class="fi fi-brands-whatsapp"></i></a><a class="back" href="https://wa.me/{{contactInfo.phone}}"><i class="fi fi-brands-whatsapp"></i></a></li>
     </ul>
 </div>
