edit sub category

--- a/src/app/core/Layout/login-layout/login-layout.component.html
+++ b/src/app/core/Layout/login-layout/login-layout.component.html
@@ -20,7 +20,8 @@
           <input type="password" suggested="current-password" formControlName="password" class="form-control"  placeholder="الرقم السرى" autocomplete="off">
         </div>
       </div>
-      <button class="btn btn-lg btn-success w-100" [disabled]="formLogin.invalid">دخول</button>
+      <button class="btn btn-lg btn-success w-100"  [disabled]="formLogin.invalid">دخول</button>
     </form>
   </div>
 </section>
+<p-toast />
