--- a/src/app/shared/component/navbar/navbar.component.html
+++ b/src/app/shared/component/navbar/navbar.component.html
@@ -1,59 +1,52 @@
 <div class="container">
   <header class="nav-bar">
     <div class="nav-content">
-      <a class="logo-brand" href="#"
-        ><img src="assets/img/logo.png" alt="logo" />
+      <a class="logo-brand" href="#"><img src="assets/img/logo.png" alt="logo" />
         <h5 class="text-logo">Friyoon</h5>
-        </a
-      >
-      <button
-        class="navbar-toggler "
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-        (click)="isShowSidebar = !isShowSidebar;"
-      >
-      <i class="fi fi-br-menu-burger"></i>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"
+        (click)="isShowSidebar = !isShowSidebar">
+        <i class="fi fi-br-menu-burger"></i>
       </button>
-      <div class=" navbar-content" >
-
+      <div class="navbar-content">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" routerLink="home" routerLinkActive="active"
-              >الرئيسية</a
-            >
+            <a class="nav-link" aria-current="page" routerLink="home" routerLinkActive="active">الرئيسية</a>
           </li>
           @for(navItem of ourServices;track navItem.id;) {
-            <li class="nav-item" (click)="getDetailsService(navItem.id, navItem.nameAr )" >
-            <a class="nav-link"  routerLinkActive="active"> {{navItem.nameAr}}  </a>
-            <div class="sub-menu w-100" [class.show]="activeSubMenu === navItem.nameAr && isCollapsed === false">
+          <li class="nav-item" (click)="getDetailsService(navItem.id, navItem.nameAr)">
+            <a class="nav-link" routerLinkActive="active">
+              {{ navItem.nameAr }}
+            </a>
+            <div class="sub-menu w-100" [class.show]="
+                activeSubMenu === navItem.nameAr && isCollapsed === false
+              ">
               <div class="sub-content">
                 <div class="container">
                   <div class="row">
                     @for(item of this.serviceDetails;track item) {
-                      <div class="col-lg-{{12/this.serviceDetails.length}}">
-                        <div class="sub-content">
-                        <h6>   {{item.governorateNameAr}}</h6>
+                    <div class="col-lg-{{ 12 / this.serviceDetails.length }}">
+                      <div class="sub-content">
+                        <h6>{{ item.governorateNameAr }}</h6>
                         <ul class="list-group list-group-flush">
-                          @for(serviceItem of item.services ; track serviceItem.id) {
+                          @for(serviceItem of item.services ; track
+                          serviceItem.id) {
 
-                            <li><a class="list-group-item list-group-item-action"  routerLink="/service-details/{{serviceItem.id}}" routerLinkActive="active"> {{serviceItem.nameAr}}</a></li>
+                          <li>
+                            <a class="list-group-item list-group-item-action"
+                              routerLink="/service-details/{{ serviceItem.id }}" routerLinkActive="active">
+                              {{ serviceItem.nameAr }}</a>
+                          </li>
                           }
                         </ul>
                       </div>
                     </div>
                     }
 
-
-
-                  <!--  -->
-
+                    <!--  -->
                   </div>
                 </div>
-
               </div>
             </div>
           </li>
@@ -108,58 +101,52 @@
             <a class="nav-link"  routerLink="our-service" routerLinkActive="active"><i class="fi fi-rr-search"></i></a>
           </li> -->
         </ul>
-</div>
+      </div>
     </div>
-
-
   </header>
-
 </div>
-
-
 
 <!-- View Mobile -->
 <div class="view-mobile" [class.show]="isShowSidebar">
   <aside class="sidebar" id="sidebar">
-    <ul >
-      <li >
-        <a  aria-current="page" routerLink="home" routerLinkActive="active"
-          >الرئيسية</a
-        >
+    <ul>
+      <li>
+        <a aria-current="page" routerLink="home" routerLinkActive="active">الرئيسية</a>
       </li>
       @for(navItem of ourServices;track navItem.id;) {
-      <li  (click)="getDetailsService(navItem.id, navItem.nameAr )">
-        <a   routerLinkActive="active"> {{navItem.nameAr}}</a>
-        <div class="sub-menu w-100" [class.show]="activeSubMenu === navItem.nameAr && isCollapsed === false">
+      <li (click)="getDetailsService(navItem.id, navItem.nameAr)">
+        <a routerLinkActive="active"> {{ navItem.nameAr }}</a>
+        <div class="sub-menu w-100" [class.show]="
+            activeSubMenu === navItem.nameAr && isCollapsed === false
+          ">
           <div class="sub-content">
             <div class="container">
               <div class="row">
                 @for(item of this.serviceDetails;track item) {
-                  <div class="col-lg-{{12/serviceDetails.length}}">
-                    <div class="sub-content">
-                    <h6> {{item.governorateNameAr}}</h6>
-                    <ul >
+                <div class="col-lg-{{ 12 / serviceDetails.length }}">
+                  <div class="sub-content">
+                    <h6>{{ item.governorateNameAr }}</h6>
+                    <ul>
+                      @for(serviceItem of item.services ; track serviceItem.id)
+                      {
 
-                      @for(serviceItem of item.services ; track serviceItem.id) {
-
-                      <li><a   routerLink="/service-details/{{serviceItem.id}}" routerLinkActive="active"> {{serviceItem.nameAr}}</a></li>
+                      <li>
+                        <a routerLink="/service-details/{{ serviceItem.id }}" routerLinkActive="active">
+                          {{ serviceItem.nameAr }}</a>
+                      </li>
                       }
                     </ul>
                   </div>
                 </div>
                 }
 
-
-
-              <!--  -->
-
+                <!--  -->
               </div>
             </div>
-
           </div>
         </div>
       </li>
-    }
+      }
       <!-- <li   >
         <a  (click)="toggleSubMenu('DrainCleaning')" routerLink="our-service" routerLinkActive="active">خدمات تسليك المجاري</a>
         <div class="sub-menu " [class.show]="activeSubMenu === 'DrainCleaning' && isCollapsed === false">
@@ -211,5 +198,5 @@
     </ul>
   </aside>
   <div class="overlay" (click)="isShowSidebar = false"></div>
- </div>
+</div>
 <!-- View Mobile -->
