--- a/src/app/core/pages/add-sub-category/add-sub-category.component.html
+++ b/src/app/core/pages/add-sub-category/add-sub-category.component.html
@@ -80,7 +80,7 @@
 
               <div class="col-lg-12">
                 <div class="">
-                  <label for="Fees" class="form-label"> صورة الخدمة</label>
+                  <label for="images" class="form-label"> صورة الخدمة</label>
                   <input type="file" id="images" (change)="onFileImageSelected($event)" accept="image/*" multiple
                     class="form-control" />
                 </div>
