--- a/src/app/core/pages/edit-sub-category/edit-sub-category.component.html
+++ b/src/app/core/pages/edit-sub-category/edit-sub-category.component.html
@@ -1,135 +1,193 @@
 <section class="add-main-category services-component">
-    <div class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item">
-                    <a routerLink="../admin" class="d-inline-block">الرئيسية</a>
-                </li>
-                <li class="breadcrumb-item">
-                    <a routerLink="../../sub-category" class="d-inline-block">
-                        الخدمات</a>
-                </li>
-                <li class="breadcrumb-item active" aria-current="page">تعديل خدمة</li>
-            </ol>
-        </nav>
-        <div class="title d-flex justify-content-between align-items-center my-5">
-            <h5>تعديل الخدمة</h5>
-            <div class="d-flex align-items-center gap-3">
-                <button class="btn btn-outline-primary align-items-center d-flex" (click)="updateService()">
-                    <i class="fi fi-rr-disk me-2"></i> حفظ </button>
+  <div class="container">
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a routerLink="../admin" class="d-inline-block">الرئيسية</a>
+        </li>
+        <li class="breadcrumb-item">
+          <a routerLink="../../sub-category" class="d-inline-block"> الخدمات</a>
+        </li>
+        <li class="breadcrumb-item active" aria-current="page">تعديل خدمة</li>
+      </ol>
+    </nav>
+    <div class="title d-flex justify-content-between align-items-center my-5">
+      <h5>تعديل الخدمة</h5>
+      <div class="d-flex align-items-center gap-3">
+        <button
+          class="btn btn-outline-primary align-items-center d-flex"
+          (click)="updateService()"
+        >
+          <i class="fi fi-rr-disk me-2"></i> حفظ
+        </button>
 
-                <a routerLink="../../sub-category" class="btn btn-outline-secondary align-items-center d-flex"><i
-                        class="fi fi-rr-arrow-left me-2"></i> رجوع
-                </a>
-            </div>
-        </div>
-        <div class="row bg-white shadow-sm p-5 rounded-2">
-            <div class="col-lg-12">
-                <form class="form " (ngSubmit)="updateService()" [formGroup]="formService">
-                    <div class="container add-item mb-3">
-                        <div class="row g-3">
-                            <div class="col-lg-12">
-                                <div class="">
-                                    <label for="nameAr" class="form-label">اسم الخدمة</label>
-                                    <input type="text" class="form-control" formControlName="nameAr" id="nameAr" />
-                                </div>
-                            </div>
-
-                            <div class="col-lg-6">
-                                <div class="">
-                                    <label for="categoryId" class="form-label">الفئة</label>
-                                    <select class="form-select" id="categoryId" formControlName="categoryId">
-                                        <option value="" selected>اختر الفئة</option>
-                                        <option *ngFor="let category of categories" [value]="category.id">
-                                            {{ category.nameAr }}
-                                        </option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="">
-                                    <label for="LocationIds" class="form-label"> المناطق</label>
-                                    <p-multiSelect [options]="governorates" class="p-multiselect" optionValue="id"
-                                        optionLabel="nameAr" class="p-multiselect-items" styleClass="w-100"
-                                        formControlName="LocationIds" display="chip" [showClear]="true"
-                                        placeholder="مناطق الخدمة" />
-                                </div>
-                            </div>
-                            <div class="col-lg-12" style="display: none">
-                                <div class="d-flex justify-content-evenly">
-                                    <div class="form-check form-check-inline">
-                                        <label class="form-check-label" for="showHome">
-                                            نشر الخدمة و عرضه
-                                        </label>
-                                        <input type="checkbox" formControlName="showHome" class="form-check-input"
-                                            id="showHome" />
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="">
-                                    <label for="descAr" class="form-label"> تفاصيل الخدمة </label>
-                                    <textarea name="descAr" formControlName="descAr" class="form-control" id="descAr"
-                                        rows="3"></textarea>
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="">
-                                    <label for="detailAr" class="form-label">مميزات الخدمة
-                                    </label>
-                                    <p-editor formControlName="detailAr"
-                                        [style]="{ height: '320px', direction: 'rtl' }" />
-
-                                </div>
-                            </div>
-
-                            <div class="col-lg-12">
-                                <div class="">
-                                    <label for="Fees" class="form-label"> صورة الخدمة</label>
-                                    <input type="file" id="images" (change)="onFileChange($event)" accept="image/*"
-                                        multiple class="form-control" />
-                                    <!-- <div class="text-danger" *ngIf="formService.get('imageForm')?.invalid && formService.get('imageForm')?.touched">
-                                                           <div *ngIf="formService.get('imageForm')?.getError('required')">هذا الحق اجبارى</div> </div> -->
-                                </div>
-                            </div>
-                            <div class="categories-page py-5">
-                                <h3 class="fw-bold mb-5">صور الخدمة</h3>
-
-                              <div class="row">
-                                <div class="col-lg-3" *ngFor="let slide of  images">
-                                  <a class="text-center" >
-                                    <div class="image image-product position-relative">
-                                        <img [src]="slide.previewUrl" [alt]="slide.id"
-                                            class="w-100 h-100 object-fit-contain">
-                                        <button class="delete-btn  btn position-absolute m-2 top-0 start-0 btn-danger btn-sm" type="button" (click)="removeImage(slide.id); ">
-                                            <i class="fa-solid fa-trash"></i>
-                                        </button>
-                                    </div>
-                                </a>
-                                </div>
-                                <div class="col-lg-3" *ngFor="let slide of  service.images">
-<a class="text-center" >
-                                    <div class="image image-service position-relative">
-                                        <img [src]="this.backendurl+slide.imagePath" [alt]="slide.id"
-                                            class="w-100 h-100 object-fit-contain">
-                                        <button class="delete-btn btn position-absolute m-2 top-0 start-0 btn-danger btn-sm" type="button"
-                                            (click)="deleteImage(slide.id); $event.stopPropagation();">
-                                            <i class="fa-solid fa-trash"></i>
-                                        </button>
-                                    </div>
-                                </a>
-                                </div>
-                              </div>
-
-
-
-                            </div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
+        <a
+          routerLink="../../sub-category"
+          class="btn btn-outline-secondary align-items-center d-flex"
+          ><i class="fi fi-rr-arrow-left me-2"></i> رجوع
+        </a>
+      </div>
     </div>
+    <div class="row bg-white shadow-sm p-5 rounded-2">
+      <div class="col-lg-12">
+        <form
+          class="form"
+          (ngSubmit)="updateService()"
+          [formGroup]="formService"
+        >
+          <div class="container add-item mb-3">
+            <div class="row g-3">
+              <div class="col-lg-12">
+                <div class="">
+                  <label for="nameAr" class="form-label">اسم الخدمة</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    formControlName="nameAr"
+                    id="nameAr"
+                  />
+                </div>
+              </div>
+
+              <div class="col-lg-6">
+                <div class="">
+                  <label for="categoryId" class="form-label">الفئة</label>
+                  <select
+                    class="form-select"
+                    id="categoryId"
+                    formControlName="categoryId"
+                  >
+                    <option value="" selected>اختر الفئة</option>
+                    <option
+                      *ngFor="let category of categories"
+                      [value]="category.id"
+                    >
+                      {{ category.nameAr }}
+                    </option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="">
+                  <label for="LocationIds" class="form-label"> المناطق</label>
+                  <p-multiSelect
+                    [options]="governorates"
+                    class="p-multiselect"
+                    optionValue="id"
+                    optionLabel="nameAr"
+                    class="p-multiselect-items"
+                    styleClass="w-100"
+                    formControlName="LocationIds"
+                    display="chip"
+                    [showClear]="true"
+                    placeholder="مناطق الخدمة"
+                  />
+                </div>
+              </div>
+              <div class="col-lg-12" style="display: none">
+                <div class="d-flex justify-content-evenly">
+                  <div class="form-check form-check-inline">
+                    <label class="form-check-label" for="showHome">
+                      نشر الخدمة و عرضه
+                    </label>
+                    <input
+                      type="checkbox"
+                      formControlName="showHome"
+                      class="form-check-input"
+                      id="showHome"
+                    />
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="">
+                  <label for="descAr" class="form-label"> تفاصيل الخدمة </label>
+                  <textarea
+                    name="descAr"
+                    formControlName="descAr"
+                    class="form-control"
+                    id="descAr"
+                    rows="3"
+                  ></textarea>
+                </div>
+              </div>
+              <div class="col-lg-12">
+                <div class="">
+                  <label for="detailAr" class="form-label"
+                    >مميزات الخدمة
+                  </label>
+                  <p-editor
+                    formControlName="detailAr"
+                    [style]="{ height: '320px', direction: 'rtl' }"
+                  />
+                </div>
+              </div>
+
+              <div class="col-lg-12">
+                <div class="">
+                  <label for="Fees" class="form-label"> صورة الخدمة</label>
+                  <input
+                    type="file"
+                    id="images"
+                    (change)="onFileChange($event)"
+                    accept="image/*"
+                    multiple
+                    class="form-control"
+                  />
+                  <!-- <div class="text-danger" *ngIf="formService.get('imageForm')?.invalid && formService.get('imageForm')?.touched">
+                                                           <div *ngIf="formService.get('imageForm')?.getError('required')">هذا الحق اجبارى</div> </div> -->
+                </div>
+              </div>
+              <div class="categories-page py-5">
+                <h3 class="fw-bold mb-5">صور الخدمة</h3>
+
+                <div class="row">
+                 <!--  <div class="col-lg-3" *ngFor="let slide of images">
+                    <a class="text-center">
+                      <div class="image image-product position-relative">
+                        <img
+                          [src]="slide.previewUrl"
+                          [alt]="slide.id"
+                          class="w-100 h-100 object-fit-contain"
+                        />
+                        <button
+                          class="delete-btn btn position-absolute m-2 top-0 start-0 btn-danger btn-sm"
+                          type="button"
+                          (click)="removeImage(slide.id)"
+                        >
+                          <i class="fa-solid fa-trash"></i>
+                        </button>
+                      </div>
+                    </a>
+                  </div> -->
+                  <div class="col-lg-3" *ngFor="let slide of service.images">
+                    <a class="text-center">
+                      <div class="image image-service position-relative">
+                        <img
+                          [src]="this.backendurl + slide.imagePath"
+                          [alt]="slide.id"
+                          class="w-100 h-100 object-fit-contain"
+                        />
+                        <button
+                          class="delete-btn btn position-absolute m-2 top-0 start-0 btn-danger btn-sm"
+                          type="button"
+                          (click)="
+                            deleteImage(slide.id); $event.stopPropagation()
+                          "
+                        >
+                          <i class="fa-solid fa-trash"></i>
+                        </button>
+                      </div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </section>
 
 <p-toast />
